--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>pt.brunojesus</groupId>
-    <artifactId>puzzle</artifactId>
+    <artifactId>puzzle-gui</artifactId>
     <version>1.0</version>
 
     <properties>
